tests/suite/snapshots/suite__check__tests__check__bad-equality-array-type.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-equality-array-type.xi:4:20]
   │
 4 │     c: bool = a == b
   ·                    ┬  
   ·                    ╰── Expected int[][] but found bool[][]
───╯

